# sparky-tutorial

./: CMakeLists.txt
tes/: Header.h  basic.frag  basic.vert  fileUtils.hpp  main.cpp  mat4.cpp  shader.cpp  shader.h  window.cpp  window.h
tes.xcodeproj/: project.pbxproj
tes.xcodeproj/project.xcworkspace/xcuserdata/xiaoweiwu.xcuserdatad/: UserInterfaceState.xcuserstate
tes.xcodeproj/xcuserdata/xiaoweiwu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
tes.xcodeproj/xcuserdata/xiaoweiwu.xcuserdatad/xcschemes/: tes.xcscheme  xcschememanagement.plist
